# MedNexa-EY-Techathon

./: .env  .gitignore  .replit  ARCHITECTURE.md  ReadMe.md  api.py  app.py  pyproject.toml  replit.md  requirements.txt
agents/: clinical_trials_agent.py  exim_agent.py  internal_knowledge_agent.py  iqvia_agent.py  master_agent.py  patent_agent.py  web_intelligence_agent.py
contracts/: schemas.py
data/: clinical_trials_data.json  exim_data.csv  internal_knowledge.json  iqvia_data.json  patent_data.json  web_intelligence.json
llm/: gemini_summarizer.py
mednexa-frontend/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
mednexa-frontend/src/: utils.ts
mednexa-frontend/src/app/: globals.css  layout.tsx
mednexa-frontend/src/app/chat/: page.tsx
mednexa-frontend/src/app/dashboard/: page.tsx
mednexa-frontend/src/app/reports/: page.tsx
mednexa-frontend/src/app/results/: page.tsx
mednexa-frontend/src/app/summary/: page.tsx
mednexa-frontend/src/app/upload/: page.tsx
mednexa-frontend/src/components/charts/: BarChartComponent.tsx  LineChartComponent.tsx  PieChartComponent.tsx
mednexa-frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx
mednexa-frontend/src/components/layout/: MedNexaLogo.tsx  Navbar.tsx
mednexa-frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Loading.tsx  Table.tsx
mednexa-frontend/src/services/: api.ts
orchestration/: graph.py  router.py  state.py
reports/: generator.py  templates.py
